@@ -17,8 +17,8 @@ $sys_chroot='{gforge_chroot}';
 $sys_upload_dir='{uploaddir}';
 $sys_ftp_upload_dir='{ftpuploaddir}';
 $sys_ftp_upload_host='{ftpuploadhost}';
-$sys_ftp_upload_chowner='{ftpuploadchowner}';
-$sys_apache_usergroup='{apapche_usergroup}';
+//$sys_ftp_upload_chowner='{ftpuploadchowner}';
+//$sys_apache_usergroup='{apapche_usergroup}';
 
 // Where the GForge files are placed
 // *** IMPORTANT: sys_urlroot *MUST* be an ABSOLUTE FILEYSTEM PATH NAME
@@ -41,6 +41,9 @@ $sys_session_expire = {sys_session_expire};
 // Require that user give unique (not yet existent in db) email upon
 // registration
 $sys_require_unique_email=0;
+//
+// Require that all email be copied to this address if present
+$sys_bcc_all_email_address='';
 
 // GUI modifications (menu colors, etc.)
 //	See the top of the file include/html.php, this is where the menu colors
