@@ -224,6 +224,9 @@ $sys_session_expire = 60 * 60 * 24 * 7;
 // Require that user give unique (not yet existent in db) email upon
 // registration
 $sys_require_unique_email=0;
+//
+//Require that all email be copied to this address if present
+$sys_bcc_all_email_address='';
 
 // GUI modifications (menu colors, etc.)
 //	See the top of the file include/html.php, this is where the menu colors
